--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     restart: unless-stopped
     env_file: .env
     volumes:
+  #    - /home/lwray/data/db/:/var/lib/mysql
       - $HOST_PATH_DB:/var/lib/mysql
     networks:
       - inception
@@ -17,6 +18,7 @@ services:
     restart: unless-stopped
     env_file: .env
     volumes:
+    #  - /home/lwray/data/wordpress/:/var/www/wordpress
       - $HOST_PATH_WORDPRESS:/var/www/wordpress
     networks:
       - inception
@@ -31,6 +33,7 @@ services:
     restart: unless-stopped
     env_file: .env
     volumes:
+    #  - /home/lwray/data/wordpress/:/var/www/wordpress
       - $HOST_PATH_WORDPRESS:/var/www/wordpress
     networks:
       - inception
