fixed volumes and more stuff

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,10 +1,8 @@
+#env variables are not yet available during docker build stage, only at run stage
+
 COMPOSE_PROJECT_NAME=inception
 DOMAIN_NAME=lwray.42.fr
-HOST_PATH_DB=./data/db/
-HOST_PATH_WORDPRESS=./data/wordpress/
 
-WP_URL=https://localhost
-#WP_URL=https://lwray.42.fr
 WP_ADMIN_USER=superuser
 WP_ADMIN_PW=secret
 
