--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -11,11 +11,11 @@ COPY /conf/nginx.conf /etc/nginx/sites-available/lwray.42.fr
 # This allows you to selectively disable vhosts by removing the symlink.
 RUN ln -s /etc/nginx/sites-available/lwray.42.fr /etc/nginx/sites-enabled/lwray.42.fr
 
-#create key for encypted client-server communication
+#create key for encypted client-server communication and a certificate 
 RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout /etc/ssl/private/nginx-selfsigned.key -out /etc/ssl/certs/nginx-selfsigned.crt -subj "/CN=lwray.42.fr"
 RUN chmod 775 /etc/ssl/private/nginx-selfsigned.key
 RUN chmod 775 /etc/ssl/certs/nginx-selfsigned.crt
 
 EXPOSE 443
 
-CMD echo "Running nginx" && nginx -g 'daemon off;'
+ENTRYPOINT echo "Running nginx" && nginx -g 'daemon off;'
