--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 443 ssl;
-    listen [::]:443 ssl;
+    listen [::]:443 ssl; #ipv6
     
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_certificate /etc/ssl/certs/nginx-selfsigned.crt;
